# CUDATracer

./: CMakeLists.txt  ExclusiveScan.cpp  Makefile  OriginalMakefile  README  RungeKutta4.conf  RungeKutta4ForAR2.conf  RungeKutta4ForDoubleGyre3D.conf  RungeKutta4ForTCPC.conf  RungeKutta4ForUpperVasc.conf  lcs.cpp  lcs.h  lcsBigBlockInitializationForPositions.cu  lcsBigBlockInitializationForVelocities.cu  lcsBlockedTracingOfRK4.cu  lcsCollectActiveParticlesForNewInterval.cu  lcsCollectActiveParticlesForNewRun.cu  lcsExclusiveScanForInt.cu  lcsGeometry.cpp  lcsGeometry.h  lcsGetGroupsForBlocks.cu  lcsGetStartOffsetInParticles.cu  lcsInitialCellLocation.cu  lcsRedistributeParticles.cu  lcsTetrahedronBlockIntersection.cu  lcsUnitTest.cpp  lcsUnitTest.h  lcsUtility.cpp  lcsUtility.h  main.cpp  transformer.cpp
AsyncTracer/: CUDAHostFunctions.cpp  CUDAHostFunctions.cu  CUDAHostFunctions.h  CUDAKernels.h  Makefile  RungeKutta4.conf  lcsBigBlockInitializationKernel.cu  lcsBlockedTracingKernelOfRK4.cu  lcsInitialCellLocationKernel.cu  lcsNaiveTracingKernelOfRK4.cu  lcsTetrahedronBlockIntersectionKernel.cu  lcsUnitTest.cpp  lcsUnitTest.h  lcsUtility.cpp  lcsUtility.h  main.cpp
data/: velocity3020.txt  velocity3040.txt  velocity3060.txt  velocity3080.txt  velocity3100.txt  velocity3120.txt  velocity3140.txt  velocity3160.txt  velocity3180.txt  velocity3200.txt  velocity3220.txt  velocity3240.txt  velocity3260.txt  velocity3280.txt  velocity3300.txt  velocity3320.txt  velocity3340.txt  velocity3360.txt  velocity3380.txt  velocity3400.txt  velocity3420.txt  velocity3440.txt  velocity3460.txt  velocity3480.txt  velocity3500.txt  velocity3520.txt  velocity3540.txt  velocity3560.txt  velocity3580.txt  velocity3600.txt  velocity3620.txt  velocity3640.txt  velocity3660.txt  velocity3680.txt  velocity3700.txt  velocity3720.txt  velocity3740.txt  velocity3760.txt  velocity3780.txt  (+11 more)
